# vcell

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
configs/: 10-scperturb.toml  13-hvgs.toml  14-moredata.toml  14-repro-st-rn.toml
docs/: dataset_details.csv  logbook.md
docs/api/: llms.txt
docs/api/vcell/: helpers.md  index.md  metrics.md
docs/api/vcell/data/: harmonize.md  index.md  naive_dataloader.md
docs/api/vcell/nn/: index.md  loss.md  optim.md
docs/api/vcell/pp/: ensembl.md  hvgs.md  index.md
docs/logbooks/: sam.md
experiments/: 00_mean_baseline.py  01_mlp.py  02_random_baseline.py  03_dataloader.py  04_validation.py  05_training.py  06_esm_embedding.py  06_esm_embedding_pytorch.py  06_metrics.py  07_debug.py  08_psuedobulk_mse.py  09_dataloader.py  10_scperturb.py  11_esm_embedding_pytorch.py  12_esm_embedding_jax.py  13_hvgs.py  14_repro_st_rn.py  wandb_test.py
notebooks/: 03_hvgs.py  theme.css
scripts/: assign_perts.py  canon_ensembl_map.py  compute_hvgs.py  download_replogle.py  download_scperturb.py  nourreddine_protospacer_merge.py  sample_h5mu.py  startup.bash  submit_vcc.py  tpu-init.sh
src/vcell/: __init__.py  helpers.py  install-gcloud.md  make-a-tpu-vm.md  metrics.py  tpu-init.md  tpu-tricks.md
src/vcell/data/: __init__.py  harmonize.py  naive_dataloader.py  vcc.py
src/vcell/embedding/: esm2_jax.py
src/vcell/nn/: optim.py
src/vcell/pp/: __init__.py  ensembl.py  ensembl_schema.sql  hvgs.py
src/vcell/utils/: __init__.py  tui.py
tests/: conftest.py  test_harmonize.py  test_helpers.py  test_metrics.py  test_pp_hvgs.py
