[project]
name = "vcell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.0",
    "beartype>=0.21.0",
    "cell-eval>=0.5.41",
    "jax>=0.6.2",
    "jaxtyping>=0.3.2",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "tyro>=0.9.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F722", "E402", "E501"]

[tool.uv]
package = true


[dependency-groups]
dev = [
    "pdoc3>=0.11.6",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
