[project]
name = "vcell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.0",
    "beartype>=0.21.0",
    "cell-eval>=0.5.41",
    "chex>=0.1.89",
    "equinox>=0.13.0",
    "grain>=0.2.11",
    "jax>=0.6.2",
    "jaxtyping>=0.3.2",
    "optax>=0.2.5",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
    "scanpy>=1.11.3",
    "tyro>=0.9.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F722", "E402", "E501"]

[tool.uv]
package = true


[dependency-groups]
dev = [
    "hypothesis>=6.136.6",
    "pdoc3>=0.11.6",
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.4",
]

[tool.pytest.ini_options]
timeout = 300
timeout_method = "thread"
